[gd_scene load_steps=7 format=3 uid="uid://b4ebypukt371f"]

[ext_resource type="Script" uid="uid://c6bmqcarenmnn" path="res://player/player.gd" id="1_oul6g"]
[ext_resource type="AudioStream" uid="uid://dals0oh3sex8u" path="res://assets/ProjectBoost_Audio/SFX - Death Explosion.ogg" id="2_rkbax"]
[ext_resource type="AudioStream" uid="uid://ddofcpc5tljxr" path="res://assets/ProjectBoost_Audio/SFX - Success.ogg" id="3_yw30f"]
[ext_resource type="AudioStream" uid="uid://35rpcldw2dbo" path="res://assets/ProjectBoost_Audio/SFX - Main engine thrust.ogg" id="4_qjkh3"]

[sub_resource type="CylinderMesh" id="CylinderMesh_g1dw6"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_oul6g"]

[node name="Player" type="RigidBody3D"]
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
contact_monitor = true
max_contacts_reported = 10
linear_damp = 1.0
angular_damp = 3.0
script = ExtResource("1_oul6g")
thrust = 1250.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0028431416, 0)
mesh = SubResource("CylinderMesh_g1dw6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_oul6g")

[node name="ExplosionAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_rkbax")

[node name="SuccessAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_yw30f")

[node name="RocketAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_qjkh3")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
